# DPMMSubClusters_GPU

./: DPMMSubClusters.sln  README.md
DPMMSubClusters/: CMakeLists.txt  CMakeSettings.json  DPMMSubClusters.cu  DPMMSubClusters.h  DPMMSubClusters.vcxproj  IJsonSerializable.cpp  IJsonSerializable.h  check_time.cpp  check_time.h  clusterInfo.cpp  clusterInfo.h  cudaKernel.cu  cudaKernel.cuh  cudaKernel_gaussian.cu  cudaKernel_gaussian.cuh  cudaKernel_multinomial.cu  cudaKernel_multinomial.cuh  cudaKernel_plan.cuh  data_generators.cpp  data_generators.h  distribution_sample.cpp  distribution_sample.h  dp_parallel_sampling.cpp  dp_parallel_sampling.h  draw.h  ds.h  global_params.cpp  global_params.h  hyperparams.cpp  hyperparams.h  installOCV.sh  jsonSerializer.cpp  jsonSerializer.h  local_clusters_actions.cpp  local_clusters_actions.h  main.cpp  modelInfo.cpp  modelInfo.h  moduleTypes.h  module_tests.cpp  (+8 more)
DPMMSubClusters/MIToolbox/include/MIToolbox/: MIToolbox.h
DPMMSubClusters/cmake-modules/: FindOpenCV.cmake
DPMMSubClusters/cnpy/: CMakeLists.txt
DPMMSubClusters/distributions/: multinomial_dist.cpp  multinomial_dist.h  mv_gaussian.cpp  mv_gaussian.h
DPMMSubClusters/distributions_util/: logdet.h  pdflib.cpp  pdflib.hpp  rnglib.cpp  rnglib.hpp
DPMMSubClusters/eigen-3.3.9/: CMakeSettings.json
DPMMSubClusters/eigen-3.3.9/Eigen/src/Core/arch/CUDA/: Half.h
DPMMSubClusters/jsoncpp/: CMakeLists.txt
DPMMSubClusters/priors/: multinomial_hyper.cpp  multinomial_hyper.h  multinomial_prior.cpp  multinomial_prior.h  multinomial_sufficient_statistics.cpp  multinomial_sufficient_statistics.h  niw.cpp  niw.h  niw_hyperparams.cpp  niw_hyperparams.h  niw_sufficient_statistics.cpp  niw_sufficient_statistics.h  prior.cpp  prior.h
DPMMSubClusters/stats/include/stats_incl/rand/: rinvwish.hpp  rinvwish.ipp
DPMMSubClusters/test/: CMakeLists.txt  DPMMSubClustersTest.vcxproj  ModuleTestFile1.json  ModuleTestFile2.json  ModuleTestFile3.json  cudaKernel_gaussian_test.cpp  cudaKernel_multinomial_test.cpp  data_generators_test.cpp  local_clusters_actions_test.cpp  mnm_data.npy  module_tests_test.cpp  multinomial_dist_test.cpp  multinomial_prior_test.cpp  mv_gaussian_test.cpp  myCudaKernel.h  myGen.h  myNiw.h  niwTest.cpp  niw_data_2D.npy  niw_test.cpp  packages.config  shared_actions_test.cpp  utils_test.cpp
